--- a/src/blocks/modules/price/price.scss
+++ b/src/blocks/modules/price/price.scss
@@ -1,22 +1,72 @@
 .price {
-  &-number {
-    width: 15%;
-  }
+	&-number {
+		width: 15%;
+	}
+
+	.tabs {
+		&-panel {
+			&__item {
+				display: inline-block;
+				padding: $ind;
+				margin-inline-end: -6px;
+				cursor: pointer;
+				transition: all $transition;
+
+				&:hover {
+					background-color: $base-color;
+					color: $contrast-color;
+				}
+
+				h3 {
+					margin-block: 0;
+				}
+
+				&--active {
+					color: $contrast-color;
+
+					&:hover {
+						background-color: $active-color;
+						cursor: default;
+					}
+				}
+			}
+		}
+
+		&-content {
+			&__item {
+				display: none;
+				padding: $ind;
+				transition: all 0.9s;
+
+				&--active {
+					background-color: transparent;
+				}
+			}
+		}
+	}
+
+	@media screen and (max-width: 768px) {
+		.tabs {
+			&-item {
+				padding: $indmin;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 768px) {
-  .price {
-    .table {
-      max-width: 768px;
+	.price {
+		.table {
+			max-width: 768px;
 
-      &__wrapper {
-        overflow-x: hidden;
-        white-space: normal;
-      }
-    }
+			&__wrapper {
+				overflow-x: hidden;
+				white-space: normal;
+			}
+		}
 
-    &-number {
-      width: 35%;
-    }
-  }
+		&-number {
+			width: 35%;
+		}
+	}
 }
