--- a/src/blocks/components/table/table.scss
+++ b/src/blocks/components/table/table.scss
@@ -1,38 +1,40 @@
 .table {
-  width: 100%;
-  border-spacing: 0;
-  border-collapse: collapse;
+	width: 100%;
+	border-spacing: 0;
+	border-collapse: collapse;
 
-  &__wrapper {
-    max-width: 1300px;
-  }
+	&__wrapper {
+		max-width: 1300px;
+		margin: 0 auto;
+	}
 
-  &__caption {
-    text-align: start;
-    padding: 10px;
-  }
+	&__caption {
+		text-align: start;
+		padding: 10px;
+	}
 
-  &__row {
-    border-bottom: 1px solid #333;
-  }
+	&__row {
+		border-bottom: 1px solid #333;
+	}
 
-  &__header, &__data {
-    padding: $ind;
-    text-align: start;
-  }
+	&__header,
+	&__data {
+		padding: $ind;
+		text-align: start;
+	}
 
-  &__footer {
-    .table__row {
-      border: 0;
-    }
-  }
+	&__footer {
+		.table__row {
+			border: 0;
+		}
+	}
 }
 
 @media screen and (max-width: 768px) {
-  .table {
-    &__wrapper {
-      overflow-x: scroll;
-      white-space: nowrap;
-    }
-  }
+	.table {
+		&__wrapper {
+			overflow-x: scroll;
+			white-space: nowrap;
+		}
+	}
 }
