--- a/src/blocks/components/tabs/tabs.scss
+++ b/src/blocks/components/tabs/tabs.scss
@@ -1,51 +1,51 @@
 .tabs {
-  &-panel {
+	&-panel {
+		&__item {
+			display: inline-block;
+			padding: $ind;
+			margin-inline-end: -6px;
+			cursor: pointer;
+			transition: all $transition;
 
-    &__item {
-      display: inline-block;
-      padding: $ind;
-      margin-inline-end: -6px;
-      cursor: pointer;
-      transition: all $transition;
+			&:hover {
+				background-color: $base-color;
+				color: $contrast-color;
+			}
 
-      &:hover {
-        background-color: $base-color;
-        color: $contrast-color;
-      }
+			h3 {
+				margin-block: 0;
+			}
 
-      h3 {
-        margin-block: 0;
-      }
+			&--active {
+				border-bottom: 1px solid $base-color;
+				color: $contrast-color;
 
-      &--active {
-        background-color: $active-color;
-        color: $contrast-color;
+				&:hover {
+					background-color: $active-color;
+					cursor: default;
+				}
+			}
+		}
+	}
 
-        &:hover {
-          background-color: $active-color;
-          cursor: default;
-        }
-      }
-    }
-  }
+	&-content {
+		&__item {
+			display: none;
+			padding: $ind;
+			transition: all 0.9s;
 
-  &-content {
-    &__item {
-      display: none;
-      padding: $ind;
-      transition: all 0.9s;
-
-      &--active {
-        background-color: $active-color;
-      }
-    }
-  }
+			&--active {
+				background-color: $active-color;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 768px) {
-  .tabs {
-    &-item {
-      padding: $indmin;
-    }
-  }
+	.tabs {
+		&-item {
+			width: 100%;
+			padding: $indmin;
+		}
+	}
 }
